# caplets_implementation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt  botan_modules.txt  capletsConfig.cmake  install.sh
botan_cmake/: FindBotan.cmake
examples/: correct_derivations.txt  correct_signatures.txt  create_tags.txt  cspot_examples.txt  device_cap.json  temp_der.txt  test_derivations.txt  test_requests.txt  test_signatures.txt
include/: caplets.h  secrets.h  tests.h  utilities.h
src/: CMakeLists.txt  caplets.cpp  main.cpp  run_tests.cpp  tests.cpp  utilities.cpp
src/secure_channel/: CMakeLists.txt  client.cpp  server.cpp  server_client_together.cpp
test_project/: CMakeLists.txt  test_caplets.cpp
